--- a/papers/templates/partials/_save_button_list.html
+++ b/papers/templates/partials/_save_button_list.html
@@ -8,7 +8,7 @@
                htmx.ajax('GET', '{% url 'toast' %}?message=Paper removed!', '#toast-container')"
     >
         {% csrf_token %}
-        <button type="submit" class="btn btn-sm btn-soft p-3 text-xs bg-white dark:bg-zinc-800">
+        <button type="submit" class="btn btn-sm btn-soft p-3 border border-gray-200 text-xs bg-white dark:bg-zinc-800 dark:border-zinc-700">
             Unsave Paper
         </button>
     </form>
@@ -21,7 +21,7 @@
                htmx.ajax('GET', '{% url 'toast' %}?message=Paper saved!', '#toast-container')"
     >
         {% csrf_token %}
-        <button type="submit" class="btn btn-sm btn-soft p-3  text-xs bg-white dark:bg-zinc-800">
+        <button type="submit" class="btn btn-sm btn-soft p-3 border border-gray-200 text-xs bg-white dark:bg-zinc-800 dark:border-zinc-700">
             Save Paper
         </button>
     </form>
