--- a/papers/templates/profile/show.html
+++ b/papers/templates/profile/show.html
@@ -5,11 +5,11 @@
 {% block content %}
 <div class="flex flex-col lg:flex-row max-w-6xl mx-auto mt-10 gap-6 px-4">
   <!-- Sidebar -->
-  <aside class="w-full lg:w-1/4 bg-white p-4 border border-gray-200">
-    <h2 class="text-lg font-semibold text-gray-800 mb-4">Account</h2>
+  <aside class="w-full lg:w-1/4 bg-white p-4 border border-gray-200 rounded-lg dark:bg-zinc-900 dark:border-zinc-700 dark:text-zinc-300">
+    <h2 class="text-lg font-semibold text-gray-800 mb-4 dark:text-zinc-300">Account</h2>
     <ul class="space-y-2 text-sm">
       <li>
-        <a href="{% url 'password_change' %}" class="block text-gray-700 hover:text-blue-600 transition">Change Password</a>
+        <a href="{% url 'password_change' %}" class="block text-gray-700 hover:text-blue-600 transition dark:text-zinc-300 dark:hover:text-zinc-500">Change Password</a>
       </li>
       <li>
         <div x-data="{ open: false }">
@@ -37,10 +37,10 @@
   </aside>
 
   <!-- Main Content -->
-  <section class="flex-1 bg-white border border-gray-200 p-6">
-    <h1 class="text-2xl font-semibold text-gray-800 pb-2 mb-4">Your Profile</h1>
+  <section class="flex-1 bg-white border border-gray-200 p-6 dark:bg-zinc-900 dark:border-zinc-700 rounded-lg">
+    <h1 class="text-2xl font-semibold text-gray-800 pb-2 mb-4 dark:text-zinc-300">Your Profile</h1>
 
-    <div class="space-y-3 text-sm text-gray-700">
+    <div class="space-y-3 text-sm text-gray-700 dark:text-zinc-300">
       <div class="flex justify-between  py-2">
         <span class="font-medium">Username</span>
         <span>{{ user.username }}</span>
